k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk-team-09-frontend
  namespace: sk-team-09
  labels:
    app: sk-team-09-frontend
spec:
  type: ClusterIP
  selector:
    app: sk-team-09-frontend
  ports:
    - name: http
      protocol: TCP
      port: 5173
      targetPort: 5173
    - name: mgmt
      protocol: TCP
      port: 5174
      targetPort: 5174
  type: ClusterIP
